# cnn-crf-stereo

./: .gitignore  .gitmodules  README.md  TODOS.md
cmake/: compiler_settings.cmake.txt  compiler_settings.cmake.txt.old  custom_settings.cmake.txt  flags_functions.cmake.txt
cmake/cmake_cpp11/: CheckGenericLambdas.cmake.txt  EnableCPP11.cmake.txt
data/parameters/kitti-2012/3-layer/cnn/: config_kitti_2012_cnn3_crf.cfg  src.txt
data/parameters/kitti-2012/3-layer/cnn+crf/: config_kitti_2012_cnn3_crf_joint.cfg  params_100.pkl
data/parameters/kitti-2012/3-layer/cnn+crf+full/: params_499.pkl
data/parameters/kitti-2012/7-layer/: src.txt
data/parameters/kitti-2012/7-layer/cnn+crf/: params_150.pkl
data/parameters/kitti-2012/7-layer/cnn+crf+full/: config_kitti_2012_cnn7_crf_full.cfg  params_73.pkl
data/parameters/kitti-2015/3-layer/cnn/: config_kitti_2015_cnn3.cfg  config_kitti_2015_cnn3_crf.cfg  params.npz  params_cont_140.pkl
data/parameters/kitti-2015/3-layer/cnn+crf/: config_kitti_2015_cnn3_crf_joint.cfg  params.npz
data/parameters/kitti-2015/3-layer/cnn+crf+full/: config_kitti_2015_cnn3_crf_full.cfg  params.npz  params_224.pkl
data/parameters/kitti-2015/7-layer/cnn/: config_kitti_2015_cnn7.cfg  config_kitti_2015_cnn7_crf.cfg  params.npz  params_555.pkl
data/parameters/kitti-2015/7-layer/cnn+crf/: config_kitti_2015_cnn7_crf_joint.cfg  params.npz
data/parameters/kitti-2015/7-layer/cnn+crf+full/: config_kitti_2015_cnn7_crf_full.cfg  params.npz
data/parameters/kitti-2015/7-layer/cnn+crf+full+xy/: config_kitti_2015_cnn7_crf_full_xy.cfg  params.npz  params_170.pkl
data/parameters/middlebury-2014/3-layer/cnn/: config_mb_cnn3.cfg  params.npz
data/parameters/middlebury-2014/3-layer/cnn+crf/: params.npz
data/parameters/middlebury-2014/3-layer/cnn+crf+full/: params.npz  params_370.pkl
data/parameters/middlebury-2014/3-layer/cnn+crf+pw/: params.npz
data/parameters/middlebury-2014/7-layer/: src.txt
data/parameters/middlebury-2014/7-layer-H/: params_374.pkl
data/parameters/middlebury-2014/7-layer/cnn/: params.npz
data/parameters/middlebury-2014/7-layer/cnn+crf/: config_mb_cnn7_crf_joint.cfg  params.npz  params_677.pkl
data/parameters/middlebury-2014/7-layer/cnn+crf+full/: params.npz
data/parameters/middlebury-2014/7-layer/cnn+crf+pw/: params.npz
data/parameters/middlebury/3-layer/cnn/: config_mb_cnn3_crf.cfg
data/parameters/middlebury/3-layer/cnn+crf/: config_mb_cnn3_crf_joint.cfg
data/parameters/middlebury/3-layer/cnn+crf+pw/: cnn_crf_pw_params_273.npz
data/parameters/middlebury/7-layer-H/: config_mb_half_cnn7_crf_full.cfg
data/parameters/middlebury/7-layer/cnn+crf+full/: config_mb_cnn7_crf_full.cfg  params_650.pkl
eval/: compute_numbers_kitti.py  compute_numbers_middlebury.py  run_all_kitti_2012.sh  run_all_kitti_2015.sh  run_all_middlebury.sh  run_kitti_2012.py  run_kitti_2015.py  run_middlebury.py  run_middlebury_H.py
eval/data/parameters/kitti-2012/3-layer/cnn/: cnn_cont_cont_cont_params_387.pkl
eval/data/parameters/kitti-2012/3-layer/cnn+crf+full/: config_kitti_2012_cnn3_crf_full.cfg
eval/data/parameters/kitti-2012/7-layer/cnn/: config_kitti_2012_cnn7_crf.cfg  params_689.pkl
eval/data/parameters/kitti-2012/7-layer/cnn+crf/: config_kitti_2012_cnn7_crf_joint.cfg
eval/data/parameters/kitti-2015/3-layer/cnn+crf/: params_cont_143.pkl
eval/data/parameters/kitti-2015/7-layer/cnn+crf/: params_101.pkl
eval/data/parameters/kitti-2015/7-layer/cnn+crf+full/: params_117.pkl
eval/data/parameters/kitti-2015/7-layer/cnn+crf+full+xy/: config_kitti_2015_cnn7_crf_full_xy.cfg~
eval/data/parameters/middlebury/3-layer/: src.txt
eval/data/parameters/middlebury/3-layer/cnn/: cnn_cont_cont_1591.pkl
eval/data/parameters/middlebury/3-layer/cnn+crf/: cnn_crf_params_970.pkl
eval/data/parameters/middlebury/3-layer/cnn+crf+full/: config_mb_cnn3_crf_full.cfg  params_370.npz
eval/data/parameters/middlebury/3-layer/cnn+crf+pw/: cnn_crf_pw_params_273.pkl  hyperp.txt  params3.npz
eval/data/parameters/middlebury/7-layer/cnn/: config_mb_cnn7.cfg  config_mb_cnn7_crf.cfg  cont_params_1514.pkl
eval/data/parameters/middlebury/7-layer/cnn+crf+pw/: params_90.pkl
src/: CMakeLists.txt  colorstereonet.cpp  colorstereonet.h  concatstereonet.cpp  concatstereonet.h  error_util.h  graystereonet.cpp  graystereonet.h  main.cpp  stereo.cpp  stereo.cu  stereo.cuh  stereo.h  stereo_img.cpp  stereonet.cpp  stereonet.h  tools.cpp  tools.h  utils.cpp  utils.cu  utils.cuh  utils.h
src/operators/: activation.cpp  activation.h  bias.cpp  bias.h  convolution.cpp  convolution.h  operator.cpp  operator.h  slackprop.cpp  slackprop.h  softmax.cpp  softmax.h  stereocorrelation.cpp  stereocorrelation.cu  stereocorrelation.cuh  stereocorrelation.h
stereo/: CMakeLists.txt  colorstereonet.cpp  colorstereonet.h  concatstereonet.cpp  concatstereonet.h  definitions.h  error_util.h  graystereonet.cpp  stereo.cpp  stereo.cu  stereo.cuh  stereo.h  stereo_img.cpp  stereonet.cpp  stereonet.h  tools.cpp  tools.h  utils.cpp  utils.cu  utils.cuh  utils.h
stereo/operators/: activation.cpp  activation.h  bias.cpp  bias.h  convolution.cpp  convolution.h  operator.cpp  operator.h  slackprop.cpp  slackprop.h  softmax.cpp  softmax.h  stereocorrelation.cpp  stereocorrelation.cu  stereocorrelation.cuh  stereocorrelation.h
undistort/: features.py  main.py  rectify.py  rectify_middlebury.py
